crates/deadline-cli/tests/cli/snapshots/cli__auth__auth_login_dcm_profile_succeeds.snap
---
source: crates/deadline-cli/tests/cli/auth.rs
info:
  program: deadline
  args:
    - auth
    - login
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1YWTBb/aws_config
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61150"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61150"
    AWS_ENDPOINT_URL_STS: "http://localhost:61150"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1YWTBb/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp1YWTBb
---
success: true
exit_code: 0
----- stdout -----
Logging into AWS Profile 'test-dcm' for AWS Deadline Cloud
Opening Deadline Cloud monitor. Please log in and then return here.

Successfully logged in: Deadline Cloud monitor profile: test-dcm


----- stderr -----
