crates/deadline-cli/tests/cli/snapshots/cli__auth__auth_logout_dcm_profile_succeeds.snap
---
source: crates/deadline-cli/tests/cli/auth.rs
info:
  program: deadline
  args:
    - auth
    - logout
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpILIk4K/aws_config
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61143"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61143"
    AWS_ENDPOINT_URL_STS: "http://localhost:61143"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpILIk4K/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpILIk4K
---
success: true
exit_code: 0
----- stdout -----
Successfully logged out of all Deadline Cloud monitor AWS profiles

----- stderr -----
