crates/deadline-cli/tests/cli/snapshots/cli__auth__auth_status_json_api_unavailable.snap
---
source: crates/deadline-cli/tests/cli/auth.rs
info:
  program: deadline
  args:
    - auth
    - status
    - "--output"
    - json
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:58886"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:58886"
    AWS_ENDPOINT_URL_S3: "http://localhost:58886"
    AWS_ENDPOINT_URL_STS: "http://localhost:58886"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp2j6kbA/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmp2j6kbA
---
success: true
exit_code: 0
----- stdout -----
{"profile_name": "(default)", "source": "HOST_PROVIDED", "status": "AUTHENTICATED", "api_availability": false}

----- stderr -----
